@@ -16,8 +16,6 @@
 ### $Id$
 ###
 
-SHELL = bash
-
 #################################################
 ### verboseness
 #Q	?= 		# be verbose
